[package]
name = "ct-scout"
version = "2.1.0"
edition = "2024"
authors = ["ct-scout contributors"]
description = "High-performance Certificate Transparency log monitor for bug bounty hunting"
license = "MIT"
repository = "https://github.com/klumz33/ct-scout"

[lib]
name = "ct_scout"
path = "src/lib.rs"

[[bin]]
name = "ct-scout"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"] }

# CT Log Parsing
x509-parser = "0.15"
base64 = "0.21"
chrono = "0.4"

ipnet = "2.9"
url = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

anyhow = "1"

hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# CLI & Argument Parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Progress & Display
indicatif = "0.17"
colored = "2.1"

# Output Formats
csv = "1.3"

# File Watching
notify = "6.1"

# Async Traits
async-trait = "0.1"

# Terminal Detection
is-terminal = "0.4"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
wiremock = "0.6"
